--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="keywords" content="skills, javascript developer, react developer, front-end developer" />
         <meta name="description" content="About Vilena Martirosova front-end developer, her projects and contacts" />
+        <title>Front-end developer - Vilena Martirosova</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
             crossorigin="anonymous" />
         <link rel="canonical" href="#" />
+        <link rel="stylesheet" href="/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@500;600;700&family=Poppins:wght@300;400;500&display=swap"
+        rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
             crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/8a73f88558.js" crossorigin="anonymous"></script>
-        <title>Front-end developer - Vilena Martirosova</title>
-        <link rel="stylesheet" href="/style.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@500;600;700&family=Poppins:wght@300;400;500&display=swap"
-            rel="stylesheet">
     </head>
     <body>
 <h1>
