--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,17 +15,27 @@
         <link rel="stylesheet" href="/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@500;600;700&family=Poppins:wght@300;400;500&display=swap"
-        rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@500;600;700&family=Poppins:wght@300;400;500&display=swap"
+            rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
             crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/8a73f88558.js" crossorigin="anonymous"></script>
     </head>
     <body>
-<h1>
-    Hi, I`m Vilena Martirosova
-</h1>
+        <div class="container">
+            <h2>
+                Hello,  I'm 
+            </h2>
+            <h1>
+                Vilena Martirosova
+            </h1>
+            <h3>
+                Front-end developer from Ukraine, based in Scotland
+            </h3>
+        <a class="btn btn-primary" href="#" role="button">Know more</a>
+        </div>
     </body>
 
 </html>
