Updated the homepage style

--- a/index.html
+++ b/index.html
@@ -23,19 +23,31 @@
             crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/8a73f88558.js" crossorigin="anonymous"></script>
     </head>
+
     <body>
-        <div class="container">
-            <h2>
-                Hello,  I'm 
-            </h2>
-            <h1>
-                Vilena Martirosova
-            </h1>
-            <h3>
-                Front-end developer from Ukraine, based in Scotland
-            </h3>
-        <a class="btn btn-primary" href="#" role="button">Know more</a>
-        </div>
+        <header>
+            <div><a href="#"></a></div>
+            <div><a href="#"></a></div>
+            <div><a href="#"></a></div>
+            <div><a href="#"></a></div>
+            <div><a href="#"></a></div>
+        </header>
+            <div class="container">
+                <h4>
+                    Hello <span class="handEmoji">👋</span>
+                </h4>
+                <h2>
+                    👩‍💻 <span class="toHoverH2">I'm</span>
+                </h2>
+                <h1>
+                    Vilena Martirosova
+                </h1>
+                <h3>
+                    Front-end developer from Ukraine, based in Scotland
+                </h3>
+                <a class="btn btn-primary" href="#" role="button">Know more</a>
+                </div>
+       
     </body>
 
 </html>
