Updated the homepage

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </header>
             <div class="container">
                 <h4>
-                    Hello <span class="handEmoji">👋</span>
+                    Welcome
                 </h4>
                 <h2>
-                    👩‍💻 <span class="toHoverH2">I'm</span>
+                    Hello, I'm
                 </h2>
                 <h1>
                     Vilena Martirosova
