Updated about hero page`s link

--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
       <h2>
         Hello, I'm
       </h2>
-      <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link" id="linkedin-link">
+      <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link"
+        id="linkedin-link">
         <h1> Vilena Martirosova</h1>
       </a>
       <h3>
         Front-end developer from Ukraine, based in Scotland
       </h3>
-      <a href="https://projects-portfolio-example.netlify.app/" target="_blank" class="primary-link"
-        title="More information about Vilena Martirosova" id="about-hero-link">Know more</a>
+      <a href="/about.html" target="_blank" class="primary-link" title="More information about Vilena Martirosova"
+        id="about-hero-link">Know more</a>
     </div>
     <div class="projects">
       <div class="projects-header">
