--- a/about.html
+++ b/about.html
@@ -24,15 +24,17 @@
   </head>
 
   <body>
-    <div class="about-me">
-      <div class="about-me-header">
+      <div class="header">
         About Me
       </div>
       <div class="description-me">
         <div class="container mb-5">
           <div class="row">
+            <div class="col-md-5">
+              <img src="/src/images/Vilena_Martirosova.jpg" class="img-fluid shadow" id="hero-img" alt="Vilena Martirosova img" />
+            </div>
             <div class="col-md-7 text-center">
-              <h4 class="mb-3">Allow me to introduce myself</h4>
+              <h4 class="mb-4">Allow me to introduce myself</h4>
               <p>
                 I am an aspiring Front-end developer looking to grow in the world of computer
                 programming. Until June 2022, I didn't
@@ -41,7 +43,7 @@
                 I'm very glad that I started studying coding because it turned out to be incredibly
                 interesting and now I want to move in this
                 direction in the future.
-                Check out some of my work in the <a href="" target="_blank" class="projects-link" title="Projects section">Projects</a>. </p>
+                Check out some of my work in the <a href="/projects.html" target="_blank" class="projects-link" title="Projects section">Projects</a>. </p>
               <h5 class="icons-header"> I've learnt</h5>
               <div class="icons">
                 <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="50"
@@ -75,15 +77,10 @@
               </div>
             </div>
 
-            <div class="col-md-4"><div class="text-center">
-              <img src="/src/images/Vilena_Martirosova.jpg" class="img-fluid text-right" id="hero-img" alt="Vilena Martirosova img"
-               width="40" /></div>
             
-            </div>
           </div>
         </div>
       </div>
-    </div>
-  </body>
+    </body>
 
 </html>
