--- a/index.html
+++ b/index.html
@@ -41,70 +41,71 @@
       <a href="/about.html" target="_blank" class="primary-link" title="More information about Vilena Martirosova"
         id="about-hero-link">Know more</a>
     </div>
-    <div class="projects">
-      <div class="projects-header">
+    <div class="projects mb-5">
+      <div class="header">
         My projects
       </div>
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <div class="project-img-bg">
+            <div class="project-img-bg shadow">
               <img src="/src/images/Chihuahua.png" id="project-img" title="Chihuahua img" alt="Chihuahua img"
                 class="img-fluid" />
             </div>
           </div>
-          <div class="col-md-6" id="project-description">
-            <h4 class="mb-4">Chihuahua landing page</h4>
+          <div class="col-md-5 border shadow p-3" id="project-description">
+            <h4 class="mb-3 mt-2">Chihuahua landing page</h4>
             <p>
               I entered the world of front-end development by gaining some knowledge in HTML, CSS, and JavaScript. I
               used my knowledge of these languages, along with my new skills in VS Code, to build a landing page about
               Chihuahuas. The page utilizes JavaScript functions to create user interaction.
             </p>
-            <div class="mb-4 mt-5">
+            <div class="mb-3 mt-4">
               <a href="https://chihuahua-dog.netlify.app/" target="_blank" class="primary-link"
                 title="Chihuahua landing page">Explore the landing page</a>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6" id="project-description">
-            <h4 class="mb-4">Weather app</h4>
+          
+          <div class="col-md-6">
+            <div class="project-img-bg shadow">
+              <img src="/src/images/weather_app_img.png" id="project-img" title="weather app" alt="weather app"
+                class="img-fluid rounded" />
+            </div>
+          </div>
+          <div class="col-md-5 border shadow p-3" id="project-description">
+            <h4 class="mb-3 mt-2">Weather app</h4>
             <p>
-              Before you go anywhere, it's always important to check the weather. 🌞 <br>
+              Before you go anywhere, it's always important to check the weather. <br>
               I built a Vanilla JavaScript weather app in SheCodes Plus, an advanced 8-week JavaScript coding workshop.
               Building upon
               my previously-gained knowledge, I also became skilled in Bootstrap, API’s, real-life development workflow,
               hosting, and
               advanced JavaScript. I combined all of these skills to create a fully-functioning weather app.
             </p>
-            <div class="mb-4 mt-5">
+            <div class="mb-3 mt-4">
               <a href="https://checkmeteo.netlify.app/" target="_blank" class="primary-link" title="weather app">Launch
                 Weather App</a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="project-img-bg">
-              <img src="/src/images/weather_app_img.png" id="project-img" title="weather app" alt="weather app"
-                class="img-fluid rounded" />
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="project-img-bg">
+            <div class="project-img-bg shadow">
               <img src="/src/images/portfolio-example-img.png" id="project-img" title="portfolio app"
                 alt="portfolio app" class="img-fluid rounded" />
             </div>
           </div>
-          <div class="col-md-6" id="project-description">
-            <h4 class="mb-4">Portfolio example project</h4>
+          <div class="col-md-5 border shadow p-3" id="project-description">
+            <h4 class="mb-3 mt-2">Portfolio example project</h4>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
               qui animi cupiditate obcaecati ad? Voluptatem officia commodi, rem
               asperiores inventore impedit non omnis similique perspiciatis
               explicabo praesentium sed. Nemo, molestiae!
             </p>
-            <div class="mb-4 mt-5">
+            <div class="mb-3 mt-4">
               <a href="https://projects-portfolio-example.netlify.app/" target="_blank" class="primary-link"
                 title="portfolio app">Explore the portfolio project</a>
             </div>
