Updated imgs styles

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div class="row">
           <div class="col-md-6">
             <div class="project-img-bg shadow">
-              <img src="/src/images/Chihuahua.png" id="project-img" title="Chihuahua img" alt="Chihuahua img"
-                class="img-fluid" />
+              <img src="/src/images/Chihuahua.png" id="Chihuahua-img" title="Chihuahua img" alt="Chihuahua img"
+                class="img-fluid rounded" />
             </div>
           </div>
           <div class="col-md-5 border shadow p-3" id="project-description">
@@ -60,9 +60,9 @@
               used my knowledge of these languages, along with my new skills in VS Code, to build a landing page about
               Chihuahuas. The page utilizes JavaScript functions to create user interaction.
             </p>
-            <div class="mb-3 mt-4">
+            <div class="mb-3 mt-5">
               <a href="https://chihuahua-dog.netlify.app/" target="_blank" class="primary-link"
-                title="Chihuahua landing page">Explore the landing page</a>
+                title="Chihuahua landing page">Explore page</a>
             </div>
           </div>
         </div>
@@ -70,7 +70,7 @@
           
           <div class="col-md-6">
             <div class="project-img-bg shadow">
-              <img src="/src/images/weather_app_img.png" id="project-img" title="weather app" alt="weather app"
+              <img src="/src/images/weather_app_img.png" id="weather-img" title="weather app" alt="weather app"
                 class="img-fluid rounded" />
             </div>
           </div>
@@ -84,16 +84,15 @@
               hosting, and
               advanced JavaScript. I combined all of these skills to create a fully-functioning weather app.
             </p>
-            <div class="mb-3 mt-4">
-              <a href="https://checkmeteo.netlify.app/" target="_blank" class="primary-link" title="weather app">Launch
-                Weather App</a>
+            <div class="mb-3 mt-5">
+              <a href="https://checkmeteo.netlify.app/" target="_blank" class="primary-link" title="weather app">Launch app</a>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <div class="project-img-bg shadow">
-              <img src="/src/images/portfolio-example-img.png" id="project-img" title="portfolio app"
+              <img src="/src/images/portfolio-example-img.png" id="portfolio-img" title="portfolio app"
                 alt="portfolio app" class="img-fluid rounded" />
             </div>
           </div>
@@ -105,9 +104,9 @@
               asperiores inventore impedit non omnis similique perspiciatis
               explicabo praesentium sed. Nemo, molestiae!
             </p>
-            <div class="mb-3 mt-4">
+            <div class="mb-3 mt-5">
               <a href="https://projects-portfolio-example.netlify.app/" target="_blank" class="primary-link"
-                title="portfolio app">Explore the portfolio project</a>
+                title="portfolio app">Explore project</a>
             </div>
           </div>
         </div>
