--- a/about.html
+++ b/about.html
@@ -31,11 +31,12 @@
         <div class="container mb-5">
           <div class="row">
             <div class="col-md-5">
-              <img src="/src/images/Vilena_Martirosova.jpg" class="img-fluid shadow" id="hero-img" alt="Vilena Martirosova img" />
+              <div class="project-img-bg shadow" id="hero">
+              <img src="/src/images/Vilena_Martirosova.jpg" class="img-fluid" id="hero-img" alt="Vilena Martirosova img" /></div>
             </div>
             <div class="col-md-7 text-center">
               <h4 class="mb-4">Allow me to introduce myself</h4>
-              <p>
+              <p class="p-1">
                 I am an aspiring Front-end developer looking to grow in the world of computer
                 programming. Until June 2022, I didn't
                 have any experience in this, but I had a huge desire to learn a beautiful and complex
@@ -43,8 +44,11 @@
                 I'm very glad that I started studying coding because it turned out to be incredibly
                 interesting and now I want to move in this
                 direction in the future.
-                Check out some of my work in the <a href="/projects.html" target="_blank" class="projects-link" title="Projects section">Projects</a>. </p>
-              <h5 class="icons-header"> I've learnt</h5>
+                Check out some of my work in the <a href="/projects.html" target="_blank" class="projects-link" title="Projects section">Projects</a>.       <br>           I'm open to Job opportunities where I can contribute, learn and grow. If you have a good
+                    opportunity that matches my
+                    skills and experience than feel free to <a href="" target="_blank" class="contact-link" title="contact me">contact me</a>.
+                  </p>
+            
               <div class="icons">
                 <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="50"
                      /><br>HTML</div>
