--- a/projects.html
+++ b/projects.html
@@ -28,107 +28,99 @@
       Projects
     </div>
     <div class="container mb-5">
-      <h4 class="mb-3 text-center">Take a look at what I've been working on!</h4>
+      <h4 class="text-center">Take a look at what I've been working on!</h4>
       <div class="row">
-        <div class="col-md-5 mt-5 mb-5">
-          <div class="text-center">
-            <img src="/src/images/weather_app_img.png" class="img-fluid shadow border" id="project-img"
+        <div class="col-md-5 mt-1 mb-5">
+          <div class="project-img-bg shadow">
+            <img src="/src/images/weather_app_img.png" class="img-fluid shadow" id="project-img"
               alt="Weather app img" />
-            <p class="mt-3">Weather app</p>
-            <div class="icons">
-              <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
-              </div>
-              <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="30" /><br>CSS
-              </div>
-              <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
-                  width="30" /><br>Bootstrap</div>
-              <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
-                  width="30" /><br>GitHub
-              </div>
-              <div><img src="/src/images/JavaScript.png" class="img-fluid" id="JavaScript-img" alt="JavaScript img"
-                  width="30" /></a><br>JavaScript</div>
-              <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
-                  width="30" /><br>Flexbox
-              </div>
-              <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
-                  width="30" /><br>Hosting
-              </div>
+          </div>
+          <p class="mt-3 text-center border rounded shadow">Weather app</p>
+          <div class="icons">
+            <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
+            </div>
+            <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="30" /><br>CSS
+            </div>
+            <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+                width="30" /><br>Bootstrap</div>
+            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+                width="30" /><br>GitHub
+            </div>
+            <div><img src="/src/images/JavaScript.png" class="img-fluid" id="JavaScript-img" alt="JavaScript img"
+                width="30" /></a><br>JavaScript</div>
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+                width="30" /><br>Flexbox
+            </div>
+            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+                width="30" /><br>Hosting
             </div>
           </div>
         </div>
-        <div class="col-md-5 mt-5 mb-5">
-          <div class="text-center">
-            <img src="/src/images/portfolio-example-img.png" class="img-fluid" id="project-img"
-              alt="Portfolio example img" />
-            <p class="mt-3">Portfolio example</p>
-            <div class="icons">
-
-              <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
-                  width="30" /><br>Bootstrap</div>
-              <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
-                  width="30" /><br>GitHub
-              </div>
-              <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
-                  width="30" /><br>Flexbox
-              </div>
-              <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="30" /><br>SEO
-              </div>
-              <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
-                  width="30" /><br>Hosting
-              </div>
-              <div><img src="/src/images/Responsive.png" class="img-fluid" id="Responsive-img" alt="Responsive img"
-                  width="30" /><br>Responsive <br>Design</div>
+        <div class="col-md-5 mt-1 mb-5">
+          <div class="project-img-bg shadow">
+          <img src="/src/images/portfolio-example-img.png" class="img-fluid shadow" id="project-img"
+            alt="Portfolio example img" /></div>
+          <p class="mt-3 text-center">Portfolio example</p>
+          <div class="icons">
+            <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+                width="30" /><br>Bootstrap</div>
+            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+                width="30" /><br>GitHub
+            </div>
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+                width="30" /><br>Flexbox
+            </div>
+            <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="30" /><br>SEO
+            </div>
+            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+                width="30" /><br>Hosting
+            </div>
+            <div><img src="/src/images/Responsive.png" class="img-fluid" id="Responsive-img" alt="Responsive img"
+                width="30" /><br>Responsive <br>Design</div>
+          </div>
+        </div>
+        <div class="col-md-5 mt-3 mb-5"><div class="project-img-bg shadow">
+          <img src="/src/images/Chihuahua.png" class="img-fluid shadow" id="project-img" alt="Chihuahua img" /></div>
+          <p class="mt-3 text-center">Landing page</p>
+          <div class="icons">
+            <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
+            </div>
+            <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="30" /><br>CSS
+            </div>
+            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+                width="30" /><br>Hosting
+            </div>
+            <div><img src="/src/images/Editor.png" class="img-fluid" id="Editor-img" alt="Editor img"
+                width="30" /><br>Editor
+            </div>
+            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+                width="30" /><br>GitHub
             </div>
           </div>
         </div>
-        <div class="col-md-5 mt-5 mb-5">
-          <div class="text-center">
-            <img src="/src/images/Chihuahua.png" class="img-fluid" id="project-img" alt="Chihuahua img" />
-            <p class="mt-3">Landing page</p>
-            <div class="icons">
-              <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
-              </div>
-              <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="30" /><br>CSS
-              </div>
+        <div class="col-md-5 mt-3">
+          <div class="project-img-bg shadow">
+          <img src="/src/images/process.jpg" class="img-fluid  shadow" id="project-img" alt="Portfolio example img" /></div>
+          <p class="mt-3 text-center">In process now...</p>
+          <div class="icons">
 
-              <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
-                  width="30" /><br>Hosting
-              </div>
-              <div><img src="/src/images/Editor.png" class="img-fluid" id="Editor-img" alt="Editor img"
-                  width="30" /><br>Editor
-              </div>
-              <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
-                  width="30" /><br>GitHub
-              </div>
+            <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+                width="30" /><br>Bootstrap</div>
+            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+                width="30" /><br>GitHub
             </div>
+            <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+                width="30" /><br>Flexbox
+            </div>
+            <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="30" /><br>SEO
+            </div>
+            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+                width="30" /><br>Hosting
+            </div>
+            <div><img src="/src/images/React.png" class="img-fluid" id="React-img" alt="React img"
+                width="30" /><br>React</div>
           </div>
         </div>
-        <div class="col-md-5 mt-5">
-          <div class="text-center">
-            <img src="/src/images/process.jpg" class="img-fluid" id="project-img" alt="Portfolio example img" />
-            <p class="mt-3">In process now...</p>
-            <div class="icons">
-
-              <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
-                  width="30" /><br>Bootstrap</div>
-              <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
-                  width="30" /><br>GitHub
-              </div>
-              <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
-                  width="30" /><br>Flexbox
-              </div>
-              <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="30" /><br>SEO
-              </div>
-              <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
-                  width="30" /><br>Hosting
-              </div>
-              <div><img src="/src/images/React.png" class="img-fluid" id="React-img" alt="React img"
-                  width="30" /><br>React</div>
-            </div>
-          </div>
-        </div>
-
-
       </div>
     </div>
   </body>
