Created contact page

--- a/about.html
+++ b/about.html
@@ -24,67 +24,72 @@
   </head>
 
   <body>
-      <div class="header">
-        About Me
-      </div>
-      <div class="description-me">
-        <div class="container mb-5">
-          <div class="row">
-            <div class="col-md-5">
-              <div class="project-img-bg shadow" id="hero">
-              <img src="/src/images/Vilena_Martirosova.jpg" class="img-fluid" id="hero-img" alt="Vilena Martirosova img" /></div>
+    <div class="header">
+      About Me
+    </div>
+    <div class="description-me">
+      <div class="container mb-5">
+        <div class="row">
+          <div class="col-md-5">
+            <div class="project-img-bg shadow" id="hero">
+              <img src="/src/images/Vilena_Martirosova.jpg" class="img-fluid" id="hero-img"
+                alt="Vilena Martirosova img" />
             </div>
-            <div class="col-md-7 text-center">
-              <h4 class="mb-4">Allow me to introduce myself</h4>
-              <p class="p-1">
-                I am an aspiring Front-end developer looking to grow in the world of computer
-                programming. Until June 2022, I didn't
-                have any experience in this, but I had a huge desire to learn a beautiful and complex
-                new language. Previously, I worked in the field of finance and economics.
-                I'm very glad that I started studying coding because it turned out to be incredibly
-                interesting and now I want to move in this
-                direction in the future.
-                Check out some of my work in the <a href="/projects.html" target="_blank" class="projects-link" title="Projects section">Projects</a>.       <br>           I'm open to Job opportunities where I can contribute, learn and grow. If you have a good
-                    opportunity that matches my
-                    skills and experience than feel free to <a href="" target="_blank" class="contact-link" title="contact me">contact me</a>.
-                  </p>
-            
-              <div class="icons">
-                <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="50"
-                     /><br>HTML</div>
-                <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="50" /><br>CSS
-                </div>
-                <div><img src="/src/images/JavaScript.png" class="img-fluid" id="JavaScript-img" alt="JavaScript img"
-                    width="50" /></a><br>JavaScript</div>
-                <div><img src="/src/images/React.png" class="img-fluid" id="React-img" alt="React img"
-                    width="50" /><br>React</div>
-                <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
-                    width="50" /><br>Bootstrap</div>
-                <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
-                    width="50" /><br>GitHub</div>
+          </div>
+          <div class="col-md-7 text-center">
+            <h4 class="mb-4">Allow me to introduce myself</h4>
+            <p class="p-1">
+              I am an aspiring Front-end developer looking to grow in the world of computer
+              programming. Until June 2022, I didn't
+              have any experience in this, but I had a huge desire to learn a beautiful and complex
+              new language. Previously, I worked in the field of finance and economics.
+              I'm very glad that I started studying coding because it turned out to be incredibly
+              interesting and now I want to move in this
+              direction in the future.
+              Check out some of my work in the <a href="/projects.html" target="_blank" class="projects-link"
+                title="Projects section">Projects</a>. <br> I'm open to Job opportunities where I can contribute, learn
+              and grow. If you have a good
+              opportunity that matches my
+              skills and experience than feel free to <a href="/contact.html" target="_blank" class="contact-link"
+                title="contact me">contact me</a>.
+            </p>
+
+            <div class="icons">
+              <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="50" /><br>HTML
               </div>
-              <div class="icons">
-                <div><img src="/src/images/Editor.png" class="img-fluid" id="Editor-img" alt="Editor img"
+              <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="50" /><br>CSS
+              </div>
+              <div><img src="/src/images/JavaScript.png" class="img-fluid" id="JavaScript-img" alt="JavaScript img"
+                  width="50" /></a><br>JavaScript</div>
+              <div><img src="/src/images/React.png" class="img-fluid" id="React-img" alt="React img"
+                  width="50" /><br>React</div>
+              <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+                  width="50" /><br>Bootstrap</div>
+              <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+                  width="50" /><br>GitHub</div>
+            </div>
+            <div class="icons">
+              <div><img src="/src/images/Editor.png" class="img-fluid" id="Editor-img" alt="Editor img"
                   width="50" /><br>Editor</div>
 
-                <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
-                    width="50" /><br>Flexbox</div>
+              <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+                  width="50" /><br>Flexbox</div>
 
-                <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="50" /><br>SEO
-                </div>
-                <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
-                    width="50" /><br>Hosting</div>
-                <div><img src="/src/images/Responsive.png" class="img-fluid" id="Responsive-img" alt="Responsive img"
-                    width="50" /><br>Responsive <br>Design</div>
-                <div><img src="/src/images/API.png" class="img-fluid" id="APIL-img" alt="API img" width="50" /> <br>API
-                </div>
+              <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="50" /><br>SEO
+              </div>
+              <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+                  width="50" /><br>Hosting</div>
+              <div><img src="/src/images/Responsive.png" class="img-fluid" id="Responsive-img" alt="Responsive img"
+                  width="50" /><br>Responsive <br>Design</div>
+              <div><img src="/src/images/API.png" class="img-fluid" id="APIL-img" alt="API img" width="50" /> <br>API
               </div>
             </div>
-
-            
           </div>
+
+
         </div>
       </div>
-    </body>
+    </div>
+  </body>
 
 </html>
