--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
       Projects
     </div>
     <div class="container mb-5">
-      <h4 class="text-center">Take a look at what I've been working on!</h4>
+      <h4 class="text-center" id="text-header">Take a look at what I've been working on!</h4>
       <div class="row">
         <div class="col-md-5 mt-1 mb-5">
           <div class="project-img-bg shadow">
