--- a/contact.html
+++ b/contact.html
@@ -28,17 +28,23 @@
         <div class="header">
             Contact
         </div>
-        <div class="container mb-4">
-            <h4 class="text-center" id="text-header">Feel free to contact me and I will get back as soon as possible!</h4>
+        <div class="container mb-5">
+            <h4 class="text-center" id="text-header">Feel free to contact me and I will get back as soon as possible!
+            </h4>
             <div class="row text-center" id="contacts">
-                <div class="mb-4">Email <br> <a href="mailto:vilenamartirosova@gmail.com" title="Email Vilena Martirosova"
-                    class="email-link"><i class="fa-regular fa-envelope"></i></a> </div>
-                <div class="mb-4">LinkedIn <br> <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link" class="linkedin-link"><i class="fa-brands fa-linkedin"></i></a></div>
-                <div class="mb-4">GitHub<br> <a href="https://github.com/VilenaUKR" target="_blank" title="GitHub Vilena Martirosova"
-                        class="gitHub-link"><i class="fa-brands fa-github"></i></a></div>
-                <div class="mb-4">Facebook <br> <a href="https://www.facebook.com/vilena.martirosova" target="_blank" title="Facebook Vilena Martirosova"
-                    class="facebook-link"><i class="fa-brands fa-square-facebook"></i></a></div>
-                    
+                <div class="mb-4">Email <br> <a href="mailto:vilenamartirosova@gmail.com"
+                        title="Email Vilena Martirosova" class="email-link"><i class="fa-regular fa-envelope"></i></a>
+                </div>
+                <div class="mb-4">LinkedIn <br> <a href="https://www.linkedin.com/in/vilena-m-559307226/"
+                        target="_blank" title="LinkedIn-link" class="linkedin-link"><i
+                            class="fa-brands fa-linkedin"></i></a></div>
+                <div class="mb-4">GitHub<br> <a href="https://github.com/VilenaUKR" target="_blank"
+                        title="GitHub Vilena Martirosova" class="gitHub-link"><i class="fa-brands fa-github"></i></a>
+                </div>
+                <div class="mb-4">Facebook <br> <a href="https://www.facebook.com/vilena.martirosova" target="_blank"
+                        title="Facebook Vilena Martirosova" class="facebook-link"><i
+                            class="fa-brands fa-square-facebook"></i></a></div>
+
             </div>
         </div>
     </body>
