--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         Hello, I'm
       </h2>
       <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link"
-        id="linkedin-link">
+        id="header-linkedin-link">
         <h1> Vilena Martirosova</h1>
       </a>
       <h3>
