--- a/projects.html
+++ b/projects.html
@@ -31,11 +31,12 @@
       <h4 class="text-center" id="text-header">Take a look at what I've been working on!</h4>
       <div class="row">
         <div class="col-md-5 mt-1 mb-5">
-          <div class="project-img-bg shadow">
+          <div class="project-img-bg2 shadow">
             <img src="/src/images/weather_app_img.png" class="img-fluid shadow" id="project-img"
               alt="Weather app img" />
-          </div>
-          <p class="mt-3 text-center border rounded shadow">Weather app</p>
+          </div><a href="/index.html#weather-img"  target="_blank" id="btn-follow-projects">
+            <p class="secondary-link">Weather app</p>
+          </a>
           <div class="icons">
             <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
             </div>
@@ -58,9 +59,11 @@
         </div>
         <div class="col-md-5 mt-1 mb-5">
           <div class="project-img-bg shadow">
-          <img src="/src/images/portfolio-example-img.png" class="img-fluid shadow" id="project-img"
-            alt="Portfolio example img" /></div>
-          <p class="mt-3 text-center">Portfolio example</p>
+            <img src="/src/images/portfolio-example-img.png" class="img-fluid shadow" id="project-img"
+              alt="Portfolio example img" />
+          </div><a href="/index.html#portfolio-img" target="_blank" id="btn-follow-projects">
+            <p class="secondary-link" id="par-follow-projects">Portfolio example</p>
+          </a>
           <div class="icons">
             <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
                 width="30" /><br>Bootstrap</div>
@@ -79,9 +82,12 @@
                 width="30" /><br>Responsive <br>Design</div>
           </div>
         </div>
-        <div class="col-md-5 mt-3 mb-5"><div class="project-img-bg shadow">
-          <img src="/src/images/Chihuahua.png" class="img-fluid shadow" id="project-img" alt="Chihuahua img" /></div>
-          <p class="mt-3 text-center">Landing page</p>
+        <div class="col-md-5 mt-3 mb-5">
+          <div class="project-img-bg shadow">
+            <img src="/src/images/Chihuahua.png" class="img-fluid shadow" id="project-img" alt="Chihuahua img" />
+          </div><a href="/index.html#Chihuahua-img" target="_blank" id="btn-follow-projects">
+            <p class="secondary-link">Landing page</p>
+          </a>
           <div class="icons">
             <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
             </div>
@@ -99,9 +105,10 @@
           </div>
         </div>
         <div class="col-md-5 mt-3">
-          <div class="project-img-bg shadow">
-          <img src="/src/images/process.jpg" class="img-fluid  shadow" id="project-img" alt="Portfolio example img" /></div>
-          <p class="mt-3 text-center">In process now...</p>
+          <div class="project-img-bg2 shadow">
+            <img src="/src/images/process.jpg" class="img-fluid  shadow" id="project-img" alt="Portfolio example img" />
+          </div>
+          <p class="secondary-link">In process now...</p>
           <div class="icons">
 
             <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
