--- a/about.html
+++ b/about.html
@@ -23,7 +23,31 @@
     <script src="https://kit.fontawesome.com/8a73f88558.js" crossorigin="anonymous"></script>
   </head>
 
-  <body>
+  <body><nav class="navbar navbar-expand-lg navbar-light border shadow fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Vilena Martirosova</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" href="/index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/about.html">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/projects.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact.html">Contacts</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     <div class="header">
       About Me
     </div>
