--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,35 @@
     </head>
 
     <body>
+        <nav class="navbar navbar-expand-lg navbar-light border shadow fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Vilena Martirosova</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link " aria-current="page" href="/index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about.html">About me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/projects.html">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/contact.html">Contacts</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <div class="header">
             Contact
         </div>
-        <div class="container mb-5">
+        <div class="container mb-3">
             <h4 class="text-center" id="text-header">Feel free to contact me and I will get back as soon as possible!
             </h4>
             <div class="row text-center" id="contacts">
