--- a/index.html
+++ b/index.html
@@ -24,9 +24,34 @@
   </head>
 
   <body>
-    <div class="welcome">
-      Welcome
-    </div>
+      <nav class="navbar navbar-expand-lg navbar-light border shadow fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Vilena Martirosova</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/about.html">About me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/projects.html">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/contact.html">Contacts</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="welcome">
+        Welcome
+      </div>
     <div class="hero">
       <h2>
         Hello, I'm
