--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,31 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light border shadow fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Vilena Martirosova</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link " aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="header">
       Projects
     </div>
@@ -34,7 +59,7 @@
           <div class="project-img-bg2 shadow">
             <img src="/src/images/weather_app_img.png" class="img-fluid shadow" id="project-img"
               alt="Weather app img" />
-          </div><a href="/index.html#weather-img"  target="_blank" id="btn-follow-projects">
+          </div><a href="/index.html#weather-img" target="_blank" id="btn-follow-projects">
             <p class="secondary-link">Weather app</p>
           </a>
           <div class="icons">
