--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <script src="https://kit.fontawesome.com/8a73f88558.js" crossorigin="anonymous"></script>
   </head>
 
-  <body><nav class="navbar navbar-expand-lg navbar-light border shadow fixed-top">
+  <body><nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Vilena Martirosova</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
