--- a/index.html
+++ b/index.html
@@ -24,39 +24,37 @@
   </head>
 
   <body>
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Vilena Martirosova</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/about.html">About me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/projects.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="/contact.html">Contacts</a>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" target="_blank" href="#">Vilena Martirosova</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="_blank" href="/about.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="_blank" href="/projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" target="_blank" href="/contact.html">Contacts</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-     <div class="hero">
+      </div>
+    </nav>
+    <div class="hero">
       <h2>
         Hello, I'm
       </h2>
-      <a href="https://www.linkedin.com/in/vilena-m-559307226/" target="_blank" title="LinkedIn-link"
-        id="header-linkedin-link">
-        <h1> Vilena Martirosova</h1>
-      </a>
+       <h1> Vilena Martirosova</h1>
+     
       <h3>
         Front-end developer from Ukraine, based in Scotland
       </h3>
@@ -82,14 +80,14 @@
               used my knowledge of these languages, along with my new skills in VS Code, to build a landing page about
               Chihuahuas. The page utilizes JavaScript functions to create user interaction.
             </p>
-            <div class="mb-3 mt-5">
+            <div class="mb-3 mt-5"><div class="btn-shadow">
               <a href="https://chihuahua-dog.netlify.app/" target="_blank" class="primary-link"
-                title="Chihuahua landing page">Explore page</a>
+                title="Chihuahua landing page">Explore page</a></div>
             </div>
           </div>
         </div>
         <div class="row">
-          
+
           <div class="col-md-6">
             <div class="project-img-bg shadow">
               <img src="/src/images/weather_app_img.png" id="weather-img" title="weather app" alt="weather app"
@@ -107,7 +105,8 @@
               advanced JavaScript. I combined all of these skills to create a fully-functioning weather app.
             </p>
             <div class="mb-3 mt-5">
-              <a href="https://checkmeteo.netlify.app/" target="_blank" class="primary-link" title="weather app">Launch app</a>
+              <a href="https://checkmeteo.netlify.app/" target="_blank" class="primary-link" title="weather app">Launch
+                app</a>
             </div>
           </div>
         </div>
