--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
   <body><nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Vilena Martirosova</a>
+      <a class="navbar-brand" target="_blank" href="#">Vilena Martirosova</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,16 +33,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/index.html">Home</a>
+            <a class="nav-link "  target="_blank" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="/about.html">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/projects.html">Projects</a>
+            <a class="nav-link" target="_blank" href="/projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contacts</a>
+            <a class="nav-link" target="_blank" href="/contact.html">Contacts</a>
           </li>
         </ul>
       </div>
