--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Vilena Martirosova</a>
+                <a class="navbar-brand" target="_blank" href="#">Vilena Martirosova</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,13 +35,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="/index.html">Home</a>
+                            <a class="nav-link " aria-current="page" target="_blank" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about.html">About me</a>
+                            <a class="nav-link" target="_blank" href="/about.html">About me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/projects.html">Projects</a>
+                            <a class="nav-link" target="_blank" href="/projects.html">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="/contact.html">Contacts</a>
