--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Vilena Martirosova</a>
+        <a class="navbar-brand" target="_blank" href="#">Vilena Martirosova</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,16 +34,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link " target="_blank" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About me</a>
+              <a class="nav-link" target="_blank" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contacts</a>
+              <a class="nav-link" target="_blank" href="/contact.html">Contacts</a>
             </li>
           </ul>
         </div>
@@ -59,101 +59,104 @@
           <div class="project-img-bg2 shadow">
             <img src="/src/images/weather_app_img.png" class="img-fluid shadow" id="project-img"
               alt="Weather app img" />
-          </div><a href="/index.html#weather-img" target="_blank" id="btn-follow-projects">
+          </div>
+          <div class="btn-shadow">
+          <a href="/index.html#weather-img" target="_blank" id="btn-follow-projects">
             <p class="secondary-link">Weather app</p>
           </a>
-          <div class="icons">
-            <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
-            </div>
-            <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="30" /><br>CSS
-            </div>
-            <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
-                width="30" /><br>Bootstrap</div>
-            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
-                width="30" /><br>GitHub
-            </div>
-            <div><img src="/src/images/JavaScript.png" class="img-fluid" id="JavaScript-img" alt="JavaScript img"
-                width="30" /></a><br>JavaScript</div>
-            <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
-                width="30" /><br>Flexbox
-            </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
-                width="30" /><br>Hosting
-            </div>
-          </div>
         </div>
-        <div class="col-md-5 mt-1 mb-5">
-          <div class="project-img-bg shadow">
-            <img src="/src/images/portfolio-example-img.png" class="img-fluid shadow" id="project-img"
-              alt="Portfolio example img" />
-          </div><a href="/index.html#portfolio-img" target="_blank" id="btn-follow-projects">
-            <p class="secondary-link" id="par-follow-projects">Portfolio example</p>
-          </a>
-          <div class="icons">
-            <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
-                width="30" /><br>Bootstrap</div>
-            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
-                width="30" /><br>GitHub
-            </div>
-            <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
-                width="30" /><br>Flexbox
-            </div>
-            <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="30" /><br>SEO
-            </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
-                width="30" /><br>Hosting
-            </div>
-            <div><img src="/src/images/Responsive.png" class="img-fluid" id="Responsive-img" alt="Responsive img"
-                width="30" /><br>Responsive <br>Design</div>
+        <div class="icons">
+          <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
           </div>
-        </div>
-        <div class="col-md-5 mt-3 mb-5">
-          <div class="project-img-bg shadow">
-            <img src="/src/images/Chihuahua.png" class="img-fluid shadow" id="project-img" alt="Chihuahua img" />
-          </div><a href="/index.html#Chihuahua-img" target="_blank" id="btn-follow-projects">
-            <p class="secondary-link">Landing page</p>
-          </a>
-          <div class="icons">
-            <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
-            </div>
-            <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="30" /><br>CSS
-            </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
-                width="30" /><br>Hosting
-            </div>
-            <div><img src="/src/images/Editor.png" class="img-fluid" id="Editor-img" alt="Editor img"
-                width="30" /><br>Editor
-            </div>
-            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
-                width="30" /><br>GitHub
-            </div>
+          <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="30" /><br>CSS
           </div>
-        </div>
-        <div class="col-md-5 mt-3">
-          <div class="project-img-bg2 shadow">
-            <img src="/src/images/process.jpg" class="img-fluid  shadow" id="project-img" alt="Portfolio example img" />
+          <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+              width="30" /><br>Bootstrap</div>
+          <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+              width="30" /><br>GitHub
           </div>
-          <p class="secondary-link">In process now...</p>
-          <div class="icons">
-
-            <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
-                width="30" /><br>Bootstrap</div>
-            <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
-                width="30" /><br>GitHub
-            </div>
-            <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
-                width="30" /><br>Flexbox
-            </div>
-            <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="30" /><br>SEO
-            </div>
-            <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
-                width="30" /><br>Hosting
-            </div>
-            <div><img src="/src/images/React.png" class="img-fluid" id="React-img" alt="React img"
-                width="30" /><br>React</div>
+          <div><img src="/src/images/JavaScript.png" class="img-fluid" id="JavaScript-img" alt="JavaScript img"
+              width="30" /></a><br>JavaScript</div>
+          <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+              width="30" /><br>Flexbox
+          </div>
+          <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+              width="30" /><br>Hosting
           </div>
         </div>
       </div>
+      <div class="col-md-5 mt-1 mb-5">
+        <div class="project-img-bg shadow">
+          <img src="/src/images/portfolio-example-img.png" class="img-fluid shadow" id="project-img"
+            alt="Portfolio example img" />
+        </div><div class="btn-shadow"><a href="/index.html#portfolio-img" target="_blank" id="btn-follow-projects">
+          <p class="secondary-link" id="par-follow-projects">Portfolio example</p>
+        </a></div>
+        <div class="icons">
+          <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+              width="30" /><br>Bootstrap</div>
+          <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+              width="30" /><br>GitHub
+          </div>
+          <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+              width="30" /><br>Flexbox
+          </div>
+          <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="30" /><br>SEO
+          </div>
+          <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+              width="30" /><br>Hosting
+          </div>
+          <div><img src="/src/images/Responsive.png" class="img-fluid" id="Responsive-img" alt="Responsive img"
+              width="30" /><br>Responsive <br>Design</div>
+        </div>
+      </div>
+      <div class="col-md-5 mt-3 mb-5">
+        <div class="project-img-bg shadow">
+          <img src="/src/images/Chihuahua.png" class="img-fluid shadow" id="project-img" alt="Chihuahua img" />
+        </div><div class="btn-shadow"><a href="/index.html#Chihuahua-img" target="_blank" id="btn-follow-projects">
+          <p class="secondary-link">Landing page</p>
+        </a></div>
+        <div class="icons">
+          <div><img src="/src/images/HTML.png" class="img-fluid" id="HTML-img" alt="HTML img" width="30" /><br>HTML
+          </div>
+          <div><img src="/src/images/CSS.png" class="img-fluid" id="CSS-img" alt="CSS img" width="30" /><br>CSS
+          </div>
+          <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+              width="30" /><br>Hosting
+          </div>
+          <div><img src="/src/images/Editor.png" class="img-fluid" id="Editor-img" alt="Editor img"
+              width="30" /><br>Editor
+          </div>
+          <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+              width="30" /><br>GitHub
+          </div>
+        </div>
+      </div>
+      <div class="col-md-5 mt-3">
+        <div class="project-img-bg2 shadow">
+          <img src="/src/images/process.jpg" class="img-fluid  shadow" id="project-img" alt="Portfolio example img" />
+        </div><div class="btn-shadow"><a href="" target="_blank" id="btn-follow-projects">
+          <p class="secondary-link">In process now...</p>
+          </a></div>
+        <div class="icons">
+          <div><img src="/src/images/Bootstrap.png" class="img-fluid" id="Bootstrap-img" alt="Bootstrap img"
+              width="30" /><br>Bootstrap</div>
+          <div><img src="/src/images/GitHub.png" class="img-fluid" id="GitHub-img" alt="GitHub img"
+              width="30" /><br>GitHub
+          </div>
+          <div><img src="/src/images/Flexbox.png" class="img-fluid" id="Flexbox-img" alt="Flexbox img"
+              width="30" /><br>Flexbox
+          </div>
+          <div><img src="/src/images/SEO.png" class="img-fluid" id="SEO-img" alt="SEO img" width="30" /><br>SEO
+          </div>
+          <div><img src="/src/images/Hosting.png" class="img-fluid" id="Hosting-img" alt="Hosting img"
+              width="30" /><br>Hosting
+          </div>
+          <div><img src="/src/images/React.png" class="img-fluid" id="React-img" alt="React img" width="30" /><br>React
+          </div>
+        </div>
+      </div>
+    </div>
     </div>
   </body>
 
